--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint:ci": "eslint --config eslint.config.js .",
+    "lint": "eslint --config eslint.config.js .",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
