--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eslint": "^9.18.0",
     "typescript": "^5.7.2",
     "@typescript-eslint/parser": "^8.20.0",
-    "@typescript-eslint/eslint-plugin": "^8.20.0"
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "@next/eslint-plugin-next": "^15.1.4"
   }
 }
